# hakrobot

./: LICENSE  README.md
YOLOv8-Visual-Recognition/: .description
YOLOv8-Visual-Recognition/vi_grab/: CMakeLists.txt  package.xml
YOLOv8-Visual-Recognition/vi_msgs/: CMakeLists.txt  package.xml
crt_ctag2f90c_gripper_visualization/: .description  urdf.rviz
crt_ctag2f90c_gripper_visualization/launch/: display (xacro).launch  display.launch  gazebo.launch
crt_ctag2f90c_gripper_visualization/urdf/: crt_ctag2f90c.urdf
easy_handeye/: .description
hak_config/: .description  .setup_assistant  CMakeLists.txt  package.xml
hak_config/config/: fake_controllers.yaml  gazebo_hak_robot.urdf  hak_robot.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
hak_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
hak_robot/: .description  CMakeLists.txt  package.xml
hak_robot/config/: joint_names_hak_robot.yaml
hak_robot/launch/: display.launch  gazebo.launch
hak_robot/meshes/: hkrobot.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
hak_robot/urdf/: hak_robot.csv  hak_robot.urdf
hikrobot_camera/: .description  CMakeLists.txt
hikrobot_camera/config/: camera.yaml
hikrobot_camera/include/: hikrobot_camera.hpp
hikrobot_camera/launch/: hikrobot_camera_rviz.launch
hikrobot_camera/src/: hikrobot_camera.cpp
hk_config/: .setup_assistant  CMakeLists.txt  package.xml
hk_config/config/: fake_controllers.yaml  hk_robot.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
hk_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
hk_config_gripper/: .description  .setup_assistant  CMakeLists.txt  package.xml
hk_config_gripper/config/: fake_controllers.yaml  gazebo_hk_robot_gripper.urdf  hk_robot_gripper.srdf  joint_limits.yaml  ompl_planning.yaml  stomp_planning.yaml
hk_config_gripper/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
hk_robot/: .description  CMakeLists.txt  package.xml
hk_robot/config/: hk_robot.yaml
hk_robot/launch/: display.launch  gazebo.launch
hk_robot/meshes/: hkrobot.STL  link2.STL
hk_robot/urdf/: hk_robot.urdf
hk_robot_gripper/: .description  CMakeLists.txt  package.xml
hk_robot_gripper/launch/: display.launch  gazebo.launch
my_camera_calibdabai/: .description  1次  2次  3次  4次  4次平均  5次（不错）  6次  7次（不错）  8次(最均衡）  9次（性能最好）
probot_driver/: .description  CMakeLists.txt  package.xml
probot_driver/config/: driver_config.yaml
probot_driver/launch/: hk_driver.launch
probot_driver/scripts/: charuco_detector.py  charuco_detectortwo.py  hk_driver_node.py  新建文本文档.txt
probot_driver/src/probot_driver/: __init__.py  tcp_client.py  trajectory_handler.py
probot_hk_demo/: .description  CMakeLists.txt  package.xml
probot_hk_demo/config/: demo_config.yaml
probot_hk_demo/launch/: collision_demo.launch  demo.launch  demo_rviz.launch
probot_hk_demo/scripts/: calibration.py  calibration_helper.py  dabaicalibration.py  moveit_cartesian_demo.py  moveit_demo.py  test.py
probot_hk_demo/src/probot_hk_demo/: __init__.py  collision_manager.py  robot_controller.py
realsense-ros/: .description
ros_astra_camera/: .description
(+21 files in other folders)
